# GenAI-Bot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_mode_column.py  003_add_bookmarks.py  004_add_share_links.py
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  bookmarks.py  chat.py  conversations.py  quiz.py  share.py  speech.py  study.py  upload.py
backend/app/services/: ai.py  quiz.py  sandbox.py  study.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/shared/[id]/: page.tsx
frontend/src/app/study/: page.tsx
frontend/src/components/: AuthForm.tsx  ChatInput.tsx  ChatMessage.tsx  CodeRunner.tsx  ConversationSidebar.tsx  ModeSelector.tsx  QuickActions.tsx  QuizMode.tsx  ThemeToggle.tsx
frontend/src/hooks/: useChat.ts  useKeyboardShortcuts.ts  useVoiceInput.ts
frontend/src/lib/: api.ts  auth.ts  websocket.ts
frontend/src/types/: google.d.ts  index.ts
src/chatbot/: __main__.py  chat.py  client.py  config.py
tests/: conftest.py  test_auth.py  test_chat.py  test_conversations.py
